external/cimanim/cimanim.h

// ----------------------------------------------------
// Public API declarations
// ----------------------------------------------------

CIMGUI_API void   c_iam_set_imgui_context(ImGuiContext* context);
CIMGUI_API void   c_iam_demo_window();
// Frame management
CIMGUI_API void   c_iam_update_begin_frame();
CIMGUI_API void   c_iam_gc(unsigned int max_age_frames);
CIMGUI_API void   c_iam_reserve(int cap_float, int cap_vec2, int cap_vec4, int cap_int, int cap_color);
CIMGUI_API void   c_iam_set_ease_lut_samples(int count);
// Global time scale (for slow-motion / fast-forward debugging)
CIMGUI_API void   c_iam_set_global_time_scale(float scale);
CIMGUI_API float  c_iam_get_global_time_scale();
// Lazy Initialization - defer channel creation until animation is needed
CIMGUI_API void   c_iam_set_lazy_init(bool enable);
CIMGUI_API bool   c_iam_is_lazy_init_enabled();
CIMGUI_API void   c_iam_register_custom_ease(int slot, iam_ease_fn fn);
CIMGUI_API void   c_iam_get_custom_ease(iam_ease_fn* pOut, int slot);
// Debug UI
CIMGUI_API void   c_iam_show_unified_inspector(bool* p_open);
CIMGUI_API void   c_iam_show_debug_timeline(ImGuiID instance_id);
// Performance Profiler
CIMGUI_API void   c_iam_profiler_enable(bool enable);
CIMGUI_API bool   c_iam_profiler_is_enabled();
CIMGUI_API void   c_iam_profiler_begin_frame();
CIMGUI_API void   c_iam_profiler_end_frame();
CIMGUI_API void   c_iam_profiler_begin(const char* name);
CIMGUI_API void   c_iam_profiler_end();
// Drag Feedback - animated feedback for drag operations
CIMGUI_API void   c_iam_drag_begin(iam_drag_feedback* pOut, ImGuiID id, ImVec2* pos);
CIMGUI_API void   c_iam_drag_update(iam_drag_feedback* pOut, ImGuiID id, ImVec2* pos, float dt);
CIMGUI_API void   c_iam_drag_release(iam_drag_feedback* pOut, ImGuiID id, ImVec2* pos, iam_drag_opts* opts, float dt);
CIMGUI_API void   c_iam_drag_cancel(ImGuiID id);
// Oscillators - continuous periodic animations
CIMGUI_API float  c_iam_oscillate(ImGuiID id, float amplitude, float frequency, int wave_type, float phase, float dt);
CIMGUI_API int    c_iam_oscillate_int(ImGuiID id, int amplitude, float frequency, int wave_type, float phase, float dt);
CIMGUI_API void   c_iam_oscillate_vec2(ImVec2* pOut, ImGuiID id, ImVec2* amplitude, ImVec2* frequency, int wave_type, ImVec2* phase, float dt);
CIMGUI_API void   c_iam_oscillate_vec4(ImVec4* pOut, ImGuiID id, ImVec4* amplitude, ImVec4* frequency, int wave_type, ImVec4* phase, float dt);
CIMGUI_API void   c_iam_oscillate_color(ImVec4* pOut, ImGuiID id, ImVec4* base_color, ImVec4* amplitude, float frequency, int wave_type, float phase, int color_space, float dt);
// Shake/Wiggle - procedural noise animations
CIMGUI_API float  c_iam_shake(ImGuiID id, float intensity, float frequency, float decay_time, float dt);
CIMGUI_API int    c_iam_shake_int(ImGuiID id, int intensity, float frequency, float decay_time, float dt);
CIMGUI_API void   c_iam_shake_vec2(ImVec2* pOut, ImGuiID id, ImVec2* intensity, float frequency, float decay_time, float dt);
CIMGUI_API void   c_iam_shake_vec4(ImVec4* pOut, ImGuiID id, ImVec4* intensity, float frequency, float decay_time, float dt);
CIMGUI_API void   c_iam_shake_color(ImVec4* pOut, ImGuiID id, ImVec4* base_color, ImVec4* intensity, float frequency, float decay_time, int color_space, float dt);
CIMGUI_API float  c_iam_wiggle(ImGuiID id, float amplitude, float frequency, float dt);
CIMGUI_API int    c_iam_wiggle_int(ImGuiID id, int amplitude, float frequency, float dt);
CIMGUI_API void   c_iam_wiggle_vec2(ImVec2* pOut, ImGuiID id, ImVec2* amplitude, float frequency, float dt);
CIMGUI_API void   c_iam_wiggle_vec4(ImVec4* pOut, ImGuiID id, ImVec4* amplitude, float frequency, float dt);
CIMGUI_API void   c_iam_wiggle_color(ImVec4* pOut, ImGuiID id, ImVec4* base_color, ImVec4* amplitude, float frequency, int color_space, float dt);
CIMGUI_API void   c_iam_trigger_shake(ImGuiID id);
// Easing evaluation
CIMGUI_API float  c_iam_eval_preset(int type, float t);
// Tween API - smoothly interpolate values over time
CIMGUI_API float  c_iam_tween_float(ImGuiID id, ImGuiID channel_id, float target, float dur, iam_ease_desc* ez, int policy, float dt);
CIMGUI_API void   c_iam_tween_vec2(ImVec2* pOut, ImGuiID id, ImGuiID channel_id, ImVec2* target, float dur, iam_ease_desc* ez, int policy, float dt);
CIMGUI_API void   c_iam_tween_vec4(ImVec4* pOut, ImGuiID id, ImGuiID channel_id, ImVec4* target, float dur, iam_ease_desc* ez, int policy, float dt);
CIMGUI_API int    c_iam_tween_int(ImGuiID id, ImGuiID channel_id, int target, float dur, iam_ease_desc* ez, int policy, float dt);
CIMGUI_API void   c_iam_tween_color(ImVec4* pOut, ImGuiID id, ImGuiID channel_id, ImVec4* target_srgb, float dur, iam_ease_desc* ez, int policy, int color_space, float dt);
// Resize-friendly helpers
CIMGUI_API void   c_iam_anchor_size(ImVec2* pOut, int space);
// Relative target tweens (percent of anchor + pixel offset) - survive window resizes
CIMGUI_API float  c_iam_tween_float_rel(ImGuiID id, ImGuiID channel_id, float percent, float px_bias, float dur, iam_ease_desc* ez, int policy, int anchor_space, int axis, float dt);
CIMGUI_API void   c_iam_tween_vec2_rel(ImVec2* pOut, ImGuiID id, ImGuiID channel_id, ImVec2* percent, ImVec2* px_bias, float dur, iam_ease_desc* ez, int policy, int anchor_space, float dt);
CIMGUI_API void   c_iam_tween_vec4_rel(ImVec4* pOut, ImGuiID id, ImGuiID channel_id, ImVec4* percent, ImVec4* px_bias, float dur, iam_ease_desc* ez, int policy, int anchor_space, float dt);
CIMGUI_API void   c_iam_tween_color_rel(ImVec4* pOut, ImGuiID id, ImGuiID channel_id, ImVec4* percent, ImVec4* px_bias, float dur, iam_ease_desc* ez, int policy, int color_space, int anchor_space, float dt);
// Rebase functions - change target of in-progress animation without restarting
CIMGUI_API void   c_iam_rebase_float(ImGuiID id, ImGuiID channel_id, float new_target, float dt);
CIMGUI_API void   c_iam_rebase_vec2(ImGuiID id, ImGuiID channel_id, ImVec2* new_target, float dt);
CIMGUI_API void   c_iam_rebase_vec4(ImGuiID id, ImGuiID channel_id, ImVec4* new_target, float dt);
CIMGUI_API void   c_iam_rebase_color(ImGuiID id, ImGuiID channel_id, ImVec4* new_target, float dt);
CIMGUI_API void   c_iam_rebase_int(ImGuiID id, ImGuiID channel_id, int new_target, float dt);
// Resolved tweens - target computed dynamically by callback each frame
CIMGUI_API float  c_iam_tween_float_resolved(ImGuiID id, ImGuiID channel_id, iam_float_resolver, void* user, float dur, iam_ease_desc* ez, int policy, float dt);
CIMGUI_API void   c_iam_tween_vec2_resolved(ImVec2* pOut, ImGuiID id, ImGuiID channel_id, iam_vec2_resolver, void* user, float dur, iam_ease_desc* ez, int policy, float dt);
CIMGUI_API void   c_iam_tween_vec4_resolved(ImVec4* pOut, ImGuiID id, ImGuiID channel_id, iam_vec4_resolver, void* user, float dur, iam_ease_desc* ez, int policy, float dt);