imgui/Dalamud.Bindings.ImAnim/ImAnimNative.cs

using System.Diagnostics.CodeAnalysis;
using System.Numerics;
using System.Runtime.InteropServices;

using Dalamud.Bindings.ImGui;

namespace Dalamud.Bindings.ImAnim;

[Experimental("Dalamud001")]
public static unsafe partial class ImAnimNative
{
    private const string LibName = "cimanim";

    // ----------------------------------------------------
    // Public API declarations
    // ----------------------------------------------------

    [LibraryImport(LibName, EntryPoint = "c_iam_set_imgui_context")]
    public static partial void SetImGuiContext(ImGuiContext* context);

    [LibraryImport(LibName, EntryPoint = "c_iam_demo_window")]
    public static partial void DemoWindow();

    // Frame management

    [LibraryImport(LibName, EntryPoint = "c_iam_update_begin_frame")]
    public static partial void UpdateBeginFrame();

    [LibraryImport(LibName, EntryPoint = "c_iam_gc")]
    public static partial void Gc(uint maxAgeFrames = 600);

    [LibraryImport(LibName, EntryPoint = "c_iam_reserve")]
    public static partial void Reserve(int capFloat, int capVec2, int capVec4, int capInt, int capColor);

    [LibraryImport(LibName, EntryPoint = "c_iam_set_ease_lut_samples")]
    public static partial void SetEaseLutSamples(int count);

    // Global time scale (for slow-motion / fast-forward debugging)

    [LibraryImport(LibName, EntryPoint = "c_iam_set_global_time_scale")]
    public static partial void SetGlobalTimeScale(float scale);

    [LibraryImport(LibName, EntryPoint = "c_iam_get_global_time_scale")]
    public static partial float GetGlobalTimeScale();

    // Lazy Initialization - defer channel creation until animation is needed

    [LibraryImport(LibName, EntryPoint = "c_iam_set_lazy_init")]
    public static partial void SetLazyInit(byte enable);

    [LibraryImport(LibName, EntryPoint = "c_iam_is_lazy_init_enabled")]
    public static partial byte IsLazyInitEnabled();

    [LibraryImport(LibName, EntryPoint = "c_iam_register_custom_ease")]
    public static partial void RegisterCustomEase(int slot, delegate* unmanaged[Cdecl]<float, float> fn);

    [LibraryImport(LibName, EntryPoint = "c_iam_get_custom_ease")]
    public static partial void GetCustomEase(delegate* unmanaged[Cdecl]<float, float>* pOut, int slot);

    // Debug UI

    [LibraryImport(LibName, EntryPoint = "c_iam_show_unified_inspector")]
    public static partial void ShowUnifiedInspector(byte* pOpen = null);

    [LibraryImport(LibName, EntryPoint = "c_iam_show_debug_timeline")]
    public static partial void ShowDebugTimeline(uint instance_id);

    // Performance Profiler

    [LibraryImport(LibName, EntryPoint = "c_iam_profiler_enable")]
    public static partial void ProfilerEnable(byte enable);

    [LibraryImport(LibName, EntryPoint = "c_iam_profiler_is_enabled")]
    public static partial byte ProfilerIsEnabled();

    [LibraryImport(LibName, EntryPoint = "c_iam_profiler_begin_frame")]
    public static partial void ProfilerBeginFrame();

    [LibraryImport(LibName, EntryPoint = "c_iam_profiler_end_frame")]
    public static partial void ProfilerEndFrame();

    [LibraryImport(LibName, EntryPoint = "c_iam_profiler_begin")]
    public static partial void ProfilerBegin(byte* name);

    [LibraryImport(LibName, EntryPoint = "c_iam_profiler_end")]
    public static partial void ProfilerEnd();

    // Drag Feedback - animated feedback for drag operations

    [LibraryImport(LibName, EntryPoint = "c_iam_drag_begin")]
    public static partial void DragBegin(ImAnimDragFeedback* pOut, uint id, Vector2* pos);

    [LibraryImport(LibName, EntryPoint = "c_iam_drag_update")]
    public static partial void DragUpdate(ImAnimDragFeedback* pOut, uint id, Vector2* pos, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_drag_release")]
    public static partial void DragRelease(ImAnimDragFeedback* pOut, uint id, Vector2* pos, ImAnimDragOpts* opts, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_drag_cancel")]
    public static partial void DragCancel(uint id);

    // Oscillators - continuous periodic animations

    [LibraryImport(LibName, EntryPoint = "c_iam_oscillate")]
    public static partial float Oscillate(uint id, float amplitude, float frequency, ImAnimWaveType waveType, float phase, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_oscillate_int")]
    public static partial int OscillateInt(uint id, int amplitude, float frequency, ImAnimWaveType waveType, float phase, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_oscillate_vec2")]
    public static partial void OscillateVec2(Vector2* pOut, uint id, Vector2* amplitude, Vector2* frequency, ImAnimWaveType waveType, Vector2* phase, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_oscillate_vec4")]
    public static partial void OscillateVec4(Vector4* pOut, uint id, Vector4* amplitude, Vector4* frequency, ImAnimWaveType waveType, Vector4* phase, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_oscillate_color")]
    public static partial void OscillateColor(Vector4* pOut, uint id, Vector4* baseColor, Vector4* amplitude, float frequency, ImAnimWaveType waveType, float phase, ImAnimColorSpace colorSpace, float dt);

    // Shake/Wiggle - procedural noise animations

    [LibraryImport(LibName, EntryPoint = "c_iam_shake")]
    public static partial float Shake(uint id, float intensity, float frequency, float decayTime, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_shake_int")]
    public static partial int ShakeInt(uint id, int intensity, float frequency, float decayTime, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_shake_vec2")]
    public static partial void ShakeVec2(Vector2* pOut, uint id, Vector2* intensity, float frequency, float decayTime, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_shake_vec4")]
    public static partial void ShakeVec4(Vector4* pOut, uint id, Vector4* intensity, float frequency, float decayTime, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_shake_color")]
    public static partial void ShakeColor(Vector4* pOut, uint id, Vector4* baseColor, Vector4* intensity, float frequency, float decayTime, ImAnimColorSpace colorSpace, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_wiggle")]
    public static partial float Wiggle(uint id, float amplitude, float frequency, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_wiggle_int")]
    public static partial int WiggleInt(uint id, int amplitude, float frequency, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_wiggle_vec2")]
    public static partial void WiggleVec2(Vector2* pOut, uint id, Vector2* amplitude, float frequency, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_wiggle_vec4")]
    public static partial void WiggleVec4(Vector4* pOut, uint id, Vector4* amplitude, float frequency, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_wiggle_color")]
    public static partial void WiggleColor(Vector4* pOut, uint id, Vector4* baseColor, Vector4* amplitude, float frequency, ImAnimColorSpace colorSpace, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_trigger_shake")]
    public static partial void TriggerShake(uint id);

    // Easing evaluation

    [LibraryImport(LibName, EntryPoint = "c_iam_eval_preset")]
    public static partial float EvalPreset(ImAnimEaseType type, float t);

    // Tween API - smoothly interpolate values over time

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_float")]
    public static partial float TweenFloat(uint id, uint channelId, float target, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_vec2")]
    public static partial void TweenVec2(Vector2* pOut, uint id, uint channelId, Vector2* target, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_vec4")]
    public static partial void TweenVec4(Vector4* pOut, uint id, uint channelId, Vector4* target, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_int")]
    public static partial int TweenInt(uint id, uint channelId, int target, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_color")]
    public static partial void TweenColor(Vector4* pOut, uint id, uint channelId, Vector4* targetSrgb, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, ImAnimColorSpace colorSpace, float dt);

    // Resize-friendly helpers

    [LibraryImport(LibName, EntryPoint = "c_iam_anchor_size")]
    public static partial void GetAnchorSize(Vector2* pOut, ImAnimAnchorSpace space);

    // Relative target tweens (percent of anchor + pixel offset) - survive window resizes

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_float_rel")]
    public static partial float TweenFloatRel(uint id, uint channelId, float percent, float pxBias, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, ImAnimAnchorSpace anchorSpace, int axis, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_vec2_rel")]
    public static partial void TweenVec2Rel(Vector2* pOut, uint id, uint channelId, Vector2* percent, Vector2* pxBias, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, ImAnimAnchorSpace anchorSpace, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_vec4_rel")]
    public static partial void TweenVec4Rel(Vector4* pOut, uint id, uint channelId, Vector4* percent, Vector4* pxBias, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, ImAnimAnchorSpace anchorSpace, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_color_rel")]
    public static partial void TweenColorRel(Vector4* pOut, uint id, uint channelId, Vector4* percent, Vector4* pxBias, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, ImAnimColorSpace colorSpace, ImAnimAnchorSpace anchorSpace, float dt);

    // Rebase functions - change target of in-progress animation without restarting

    [LibraryImport(LibName, EntryPoint = "c_iam_rebase_float")]
    public static partial void RebaseFloat(uint id, uint channelId, float newTarget, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_rebase_vec2")]
    public static partial void RebaseVec2(uint id, uint channelId, Vector2* newTarget, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_rebase_vec4")]
    public static partial void RebaseVec4(uint id, uint channelId, Vector4* newTarget, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_rebase_int")]
    public static partial void RebaseInt(uint id, uint channelId, int newTarget, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_rebase_color")]
    public static partial void RebaseColor(uint id, uint channelId, Vector4* newTarget, float dt);

    // Resolved tweens - target computed dynamically by callback each frame

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_float_resolved")]
    public static partial float TweenFloatResolved(uint id, uint channelId, delegate* unmanaged[Cdecl]<void*, float> fn, void* userData, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_vec2_resolved")]
    public static partial void TweenVec2Resolved(Vector2* pOut, uint id, uint channelId, delegate* unmanaged[Cdecl]<void*, Vector2> fn, void* userData, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, float dt);

    [LibraryImport(LibName, EntryPoint = "c_iam_tween_vec4_resolved")]
    public static partial void TweenVec4Resolved(Vector4* pOut, uint id, uint channelId, delegate* unmanaged[Cdecl]<void*, Vector4> fn, void* userData, float dur, ImAnimEaseDesc* ez, ImAnimPolicy policy, float dt);
